--- a/Lessons/07_Lab_TimeSeries.Rmd
+++ b/Lessons/07_Lab_TimeSeries.Rmd
@@ -23,7 +23,7 @@ library(lubridate)
 library(trend)
 #install.packages("zoo")
 library(zoo)
-#install.packages("Kendall")
+install.packages("Kendall")
 library(Kendall)
 #install.packages("tseries")
 library(tseries)
