--- a/Assignments/A07_TimeSeries.Rmd
+++ b/Assignments/A07_TimeSeries.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 7: Time Series Analysis"
-author: "Student Name"
+author: "Enikoe Bihari"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
